apps/internal/image-compressor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-compressor
  namespace: svc-image-compressor
  labels:
    app: image-compressor
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: image-compressor
  template:
    metadata:
      labels:
        app: image-compressor
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: web
          image: ghcr.io/fabianliske/k3s-homelab-cluster/image-compressor:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
