apps/internal/image-compressor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-compressor
  namespace: svc-image-compressor
  labels:
    app: image-compressor
spec:
  type: ClusterIP
  selector:
    app: image-compressor
  ports:
    - name: http
      port: 80
      targetPort: http
