apps/internal/image-compressor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-compressor
  namespace: svc-image-compressor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx-internal
  rules:
    - host: compressor.intern.rohrbom.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: image-compressor
                port:
                  number: 80
  tls:
    - hosts:
        - compressor.intern.rohrbom.be
      secretName: image-compressor-tls
